Fixed hover bugs on mobile browser.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -188,20 +188,22 @@ h1, h2, h3, h4, h5, h6 {
   flex-basis: var(--navbar-height);
   height: var(--navbar-height);
 }
-.navbar__item:hover {
+.navbar__item:active {
   background-color: white;
 }
-.navbar__item:hover svg {
+.navbar__item:active svg {
   fill: black;
+}
+@media (hover: hover) {
+  .navbar__item:hover {
+    background-color: white;
+  }
+  .navbar__item:hover svg {
+    fill: black;
+  }
 }
 .navbar__button {
   background-color: #333;
-}
-.navbar__button--active {
-  background-color: white;
-}
-.navbar__button--active svg {
-  fill: black;
 }
 .navbar__icon {
   width: var(--navbar-icon-size);
@@ -323,7 +325,12 @@ form label {
   border: 2px solid grey;
   border-radius: 10em;
 }
-.btn:hover {
+@media (hover: hover) {
+  .btn:hover {
+    filter: invert(100%);
+  }
+}
+.btn:active {
   filter: invert(100%);
 }
 
