--- a/static/sass/abstracts/_mixins.scss
+++ b/static/sass/abstracts/_mixins.scss
@@ -3,3 +3,11 @@
   left: 0;
   right: 0;
 }
+
+@mixin hover {
+  @media (hover: hover) {
+    &:hover {
+      @content;
+    }
+  }
+}
