--- a/static/sass/components/_button.scss
+++ b/static/sass/components/_button.scss
@@ -1,3 +1,5 @@
+@use '../abstracts/mixins';
+
 .btn {
   display: inline-block;
   padding: 1em 2em;
@@ -12,7 +14,11 @@
 
   }
   
-  &:hover {
+  @include mixins.hover {
+    filter: invert(100%);
+  }
+
+  &:active {
     filter: invert(100%);
   }
 
